--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body {
 }
 .heading {
   display: flex;
+  flex-direction:column;
   align-items: center;
   justify-content: center;
   margin-bottom: 1rem;
